2000-04-14  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/functions.c:
	    Router function "$(dequote ...)" was previously castrated
	    a bit too much.  This isn't like sendmail-8's dequote class,
	    but far more brutal beast..

	* proto/Makefile.in:
	    Fix db subdir installation to work on a system without
	    GNU/BSD install (using locally supplied script).

	* compat/rmail/Makefile.in:
	    Allow  "mkdir -p ..." to fail on Solaris. (Anywhere actually)

	* libc/whathost.c:
	    Improved error handling by adding posixy redo of things
	    in case stat()s yield an error.. (Solaris 2.6 is complaining
	    somewhat in these routines..)

	* transports/smtp/smtptls.c:
	    Moved things around so that it works also when compiled
	    WITHOUT (Open)SSL.

2000-04-13  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Moved one instance of  tls_conf_file  inside HAVE_OPENSSL
	    conditional.  Oops..

	* transports/smtp/smtp.c, transports/smtp/smtptls.c,
	  transports/smtp/smtp.h:
	    Try to combat certain TLS related problems mentioned before.
	    (An hour latter: Cured them apparently..)

	* smtpserver/smtptls.c, smtpserver/smtpserver.c:
	    Under TLS do always flush replies - to simulate one other
	    MTA running under TLS wrapper. (This was a bit latter removed.)

2000-04-12  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/db.c:
	    For Matthias Urlich; a method to declare at RELATION entry
	    if NEGATIVE CACHE is used at the particular relation (pre-
	    requires that cache is also used..) Driven with: -N option.

2000-04-11  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/mq2.c, scheduler/mq2auth.c, scheduler/prototypes.h,
	  scheduler/scheduler.h, scheduler/scheduler.c, scheduler/transport.c:
	    Hooks for verifying MAILQv2 contactee IP address.

	* router/db.c:
	    Mathias Ulrichs <smurf@noris.de> suggest negative cache
	    for DB lookup related caches.  It is simple to do, but
	    not so simple to explain to be usefull...
